--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .pioenvs
 .piolibdeps
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
+.vscode
 .pioenvs
 .piolibdeps
+.travis.yml
