--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 .pioenvs
 .piolibdeps
 .travis.yml
+.pioenvs
+.piolibdeps
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/settings.json
